<resources>
    <string name="app_name">ToDoApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="deleted">Deleted!</string>
    <string name="confirm_delete">Confirm delete</string>
    <string name="delete_text">Are you sure you want to delete this task?</string>
    <string name="panda_keeper">PANDA KEEPER</string>
    <string name="task_title">Title</string>
    <string name="task_detail">Details</string>
    <string name="task_due_date">due date</string>
    <string name="task_detail_due_date">Due Date</string>
    <string name="color_label">Choose color label:</string>
    <string name="save">Save</string>
    <string name="task_title_hint">Task title</string>
    <string name="task_details_hint">Additional details</string>
    <string name="task_add">Add</string>
</resources>
