<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/container">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/tvName"
        android:textStyle="bold"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:text="@string/task_title" />

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:padding="10sp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/tvDetail"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            android:text="@string/task_detail" />
        <TextView
            android:id="@+id/tvDue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_due_date"
            android:layout_toRightOf="@id/tvDetail"
            android:layout_alignParentRight="true"
            android:textColor="@color/material_blue_grey_950"
            android:gravity="end" />
    </RelativeLayout>
</LinearLayout>